--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,6 @@ spring.datasource.password=Root123
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+springdoc.swagger-ui.enabled=true
+springdoc.api-docs.enabled=true
+
