--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,4 +8,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 springdoc.swagger-ui.enabled=true
 springdoc.api-docs.enabled=true
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
 
